--- a/report/recommendation-rl.tex
+++ b/report/recommendation-rl.tex
@@ -77,17 +77,17 @@ Movie 3  & 0 &   0 & 0 & ...\\ \hline
 
 \subsection{Dimension reduction}
 
-The resulting feature space of the feature extraction process is quite sizable thus making the recommendation quite computational intensive.
+The feature space resulting from the feature extraction process is quite large, making the recommendation computational intensive.
 In order to deal with that problem, the feature space size has been reduced using Principal Components Analysis (PCA) [\cite{principalcompanalysis}].
 
-The principal components analysis is a machine learning procedure that apply an  orthogonal transformation to the dataset in order to obtains a new set of values which have the property of a minimised covariance. Those new variables are called principal components. There are ordered in term of variance, the first principal component having the highest variance and so on. When the procedure is applied a reduction to n-dimension consists of keeping the n-first principal components.
+The principal components analysis is a machine learning procedure that apply an orthogonal transformation to the dataset in order to obtain a new set of values that minimises the covariance. Those new variables are called principal components. There are ordered in term of variance, the first principal component having the highest variance and so on. When the procedure is applied a reduction to n-dimension consists of keeping the n-first principal components thus removing first the components with lesser variance.
 
-For our dataset we kept, the 20-first principal components out of about 50, keeping about 83\% of the variance of the original dataset.
+For our dataset we kept the 20-first principal components out of about 50, keeping about 83\% of the variance of the original dataset.
 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[width=2.1in]{img/pca.png}
-\caption{Example of a 2 dimension PCA. A reduction to one dimension would be to keep only PC1.}
+\caption{Example of a 2 dimension PCA. A reduction to one dimension would keep only PC1.}
 \label{pca}
 \end{center}
 \end{figure}
