--- a/report/recommendation-rl.tex
+++ b/report/recommendation-rl.tex
@@ -210,7 +210,11 @@ The root-mean-square error is a frequently used measure of the difference betwee
 
 \subsubsection{Average rating}
 
-\subsubsection{Recommendation time}
+The average rating is the simplest metric consisting of only the observed rating. It is interesting because it is a good indicator of how the user liked the recommendation.
+
+\subsubsection{Computation time}
+
+The last metric is the time needed to compute a recommendation. Indeed, usually a recommendation should be computed in a reasonable time, the system can't afford to make the user wait for several minutes before giving him a recommendation. However, one could argues that the computation could be parallelized on multi-core or on a big data cluster and.  \todo{dernier phrase in discussion}
 
 
 % ------ results -------
