--- a/report/recommendation-rl.tex
+++ b/report/recommendation-rl.tex
@@ -112,7 +112,7 @@ This raises one concern : as the number of movies is gigantic, some movies might
 
 \subsubsection{Content based}
 
-The content based policy try to find a movie that is close to the learned user preferences $\theta$. It takes into account the movie genre, movie year and novelty. Novelty can be defined as if the movie as been recently watched or not.
+The content based model try to find a movie that is close to the learned user preferences $\theta$. It takes into account the movie genre, movie year and novelty. Novelty can be defined as if the movie as been recently watched or not.
 
 The movie genre and movie year can be considered as a onehot encoded vector $x$.
 Without considering other factor, the utility of a user for a movie can be represented as the following.
@@ -139,7 +139,7 @@ The last task of the recommender is then to propose the movie with the highest e
 
 \subsubsection{Collaborative filtering}
 
-The collaborative filtering policy try to find a movie that is a liked movie by a similar user. It takes into account others users rating and novelty of a movie.
+The collaborative filtering model try to find a movie that is a liked movie by a similar user. It takes into account others users rating and novelty of a movie.
 
 The algorithm will start by finding a cluster of the user and $k$ others users by associating of the most similar user in clusters. The association is done by calculating the Pearson product-moment correlation coefficient on preferences $\theta$ of the targeted user and others users. Then cluster users rating are considerate to be the utility of the user for those movie. In others words, similar user's movies rating become targeted user utility for those movies.
 
