--- a/report/recommendation-rl.tex
+++ b/report/recommendation-rl.tex
@@ -200,7 +200,7 @@ Experiments were conducted on personal computer and the programming language $py
 
 The simulation consisted on simulating the interaction of a user and a recommender. Results can be found in section \ref{results} \todo{explain the simulation better}
 
-\subsection{Metrics}
+\subsection{Metrics} \label{metrics}
 
 In order to evaluate our algorithms and models in term of movie recommendation performance, an assortment of metrics retained. They could be formalised as follows.
 
@@ -228,7 +228,8 @@ This section will explore the different results obtained throughout all experime
 
 \subsection{Adaptation of \cite{main} to movie recommendation}
 
-Here are the results of the adaptation of \cite{main} to movie recommendation using a greedy algorithm and the same content based model as described in that paper.
+Here are the results of the adaptation of \cite{main} to movie recommendation using a greedy algorithm and the same content based model as described in that paper. Let's look at metrics defined in \ref{metrics}
+
 
 \begin{figure}[H]
 \begin{center}
