--- a/report/recommendation-rl.tex
+++ b/report/recommendation-rl.tex
@@ -243,7 +243,7 @@ This graph tells us that on the long term or mid term, the recommender will give
 \begin{figure}[H]
 \begin{center}
 \includegraphics[width=0.47\textwidth]{img/greedy1.png}
-\caption{capt1}
+\caption{Average mean square error for each algorithm on the content based approach}
 \label{greedy1}
 \end{center}
 \end{figure}
