--- a/report/recommendation-rl.tex
+++ b/report/recommendation-rl.tex
@@ -259,7 +259,7 @@ The graph above tends to show that it takes about 15 recommendations before star
 \begin{figure}[H]
 \begin{center}
 \includegraphics[width=0.47\textwidth]{img/greedy2.png}
-\caption{capt2}
+\caption{Average rating given by the user as a feedback to a recommendation}
 \label{schema2}
 \end{center}
 \end{figure}
@@ -267,7 +267,7 @@ The graph above tends to show that it takes about 15 recommendations before star
 \begin{figure}[H]
 \begin{center}
 \includegraphics[width=0.47\textwidth]{img/greedy3.png}
-\caption{capt3}
+\caption{Average time in second needed to produce a recommendation to the user}
 \label{greedy3}
 \end{center}
 \end{figure}
