--- a/report/recommendation-rl.tex
+++ b/report/recommendation-rl.tex
@@ -262,6 +262,8 @@ The explanation to why random get more accurate in term or prediction of rating 
 \end{center}
 \end{figure}
 
+On the graph above the feedback given by the user for two greedy different from the greedy UCB seems to dominate "random", hence it tends to indicate that two to algorithms recommend movies that the users likes more.
+
 \begin{figure}[H]
 \begin{center}
 \includegraphics[width=0.47\textwidth]{img/greedy3.png}
