--- a/report/recommendation-rl.tex
+++ b/report/recommendation-rl.tex
@@ -6,6 +6,7 @@
 \usepackage{hyperref}
 \usepackage{float}
 \usepackage{amssymb}
+\usepackage{bm}
 \usepackage[colorinlistoftodos,prependcaption,textsize=tiny]{todonotes}
 
 
