--- a/report/recommendation-rl.tex
+++ b/report/recommendation-rl.tex
@@ -287,6 +287,8 @@ On the graph above the feedback given by the user for two greedy different from 
 \end{center}
 \end{figure}
 
+On the graph above, we can see that the slowest version of greedy takes less than 0.02 seconds to produce a recommendation which is a score than would be suitable for a web interface where recommendation would be computed on request.
+
 
 \subsection{Bayesian methods}
 
