--- a/report/recommendation-rl.tex
+++ b/report/recommendation-rl.tex
@@ -213,9 +213,9 @@ The Bayesian model is developped with a composition of random variables as shown
 
 \subsection{Simulation}
 
-We conducted an empirical efficiency study of the algorithms mentioned above as well as the content based and collaborative filtering modelling. 
+We conducted an empirical efficiency study of the algorithms mentioned above as well as the content based and collaborative filtering modelling.
 
-Experiments were conducted on personal computer and the programming language $python$ was used to implement models and algorithms.
+Experiments were conducted on a personal computer and the programming language $python$ was used to implement models and algorithms.
 
 The simulation consisted on simulating the interaction of a user and a recommender. Results can be found in section \ref{results} \todo{explain the simulation better}
 
