--- a/report/recommendation-rl.tex
+++ b/report/recommendation-rl.tex
@@ -217,7 +217,8 @@ We conducted an empirical efficiency study of the algorithms mentioned above as 
 
 Experiments were conducted on a personal computer and the programming language $python$ was used to implement models and algorithms.
 
-The simulation consisted on simulating the interaction of a user and a recommender. Results can be found in section \ref{results} \todo{explain the simulation better}
+The simulation consists in the interaction between a recommender and a user. To simulate online learning, ratings from users are known in advance and retrieved at each epoch. 
+We ran each algorithm for several hundred epochs and averaged the results over more than 100 users. Results can be found in section \ref{results} \todo{explain the simulation better}
 
 \subsection{Metrics} \label{metrics}
 
