Revert "[add] exact bayes"
This reverts commit 759bac7254c2fbc52fc9b6ba9cad45a937f53e0c.

--- a/report/recommendation-rl.tex
+++ b/report/recommendation-rl.tex
@@ -337,6 +337,8 @@ On the graph above, we can see that the slowest version of greedy takes less tha
 
 \todo{futur work, real-life data, bias evaluation, big data toussa toussa}
 
+\todo{futur work, real-life data, bias evaluation, big data toussa toussa}
+
 \section{Conclusion}
 
 blabla
